--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="spotify-container">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6FnC2WpKS9rGuBDYqUdP6P?utm_source=generator&theme=0" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6FnC2WpKS9rGuBDYqUdP6P?utm_source=generator&theme=0" width="100%" height="152" frameborder="0"  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </section>
         </main>
