--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog & Multimedia Site</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-sA+qarw6TVrC0GObOmoYwQpAo9gKfv5M3bUJ93G2GzU=" crossorigin=""/>
+
 </head>
 <body>
     <div id="loader">
@@ -57,6 +59,8 @@
                 </div>
             </div>
         </section>
+        <div id="map" style="height: 500px; width: 100%;"></div>
+
         
     </main>
     <footer>
@@ -64,6 +68,8 @@
         <button id="darkModeToggle" style="margin: 20px; padding: 10px;">Toggle Dark Mode</button>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-nndB1D0J7iIgr4xP4kI5f8KQoeWw3p2LN93p6x9RRJI=" crossorigin=""></script>
+
 
 </body>
 </html>
