--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Landing</a></li>
-                <li><a href="discover.html">Discover</a></li> <!-- photo/video/music only --> 
+                <li><a href="play.html">Play</a></li> <!-- photo/video/music only --> 
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
