--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Landing</a></li>
-                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="play.html">Play</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
